--- a/.rvmrc
+++ b/.rvmrc
@@ -2,3 +2,4 @@ rvm use ruby-1.9.2@vagrantwin --create
 
 alias veewee="bundle exec veewee"
 alias vagrant="bundle exec vagrant"
+alias knife="bundle exec knife"
