--- a/ConfigurationFile.ini
+++ b/ConfigurationFile.ini
@@ -62,15 +62,15 @@ ERRORREPORTING="False"
 
 ; Specify the root installation directory for native shared components.
 
-;INSTALLSHAREDDIR="C:\Program Files\Microsoft SQL Server"
+INSTALLSHAREDDIR="C:\Program Files\Microsoft SQL Server"
 
 ; Specify the root installation directory for the WOW64 shared components.
 
-;INSTALLSHAREDWOWDIR="C:\Program Files (x86)\Microsoft SQL Server"
+INSTALLSHAREDWOWDIR="C:\Program Files (x86)\Microsoft SQL Server"
 
 ; Specify the installation directory.
 
-;INSTANCEDIR="C:\Program Files\Microsoft SQL Server"
+INSTANCEDIR="C:\Program Files\Microsoft SQL Server"
 
 ; Specify that SQL Server feature usage data can be collected and sent to Microsoft. Specify 1 or True to enable and 0 or False to disable this feature.
 
