sqlexpress w/tools and restore database

--- a/ConfigurationFileWTools.ini
+++ b/ConfigurationFileWTools.ini
@@ -48,7 +48,8 @@ ENU="True"
 
 ; Parameter that controls the user interface behavior. Valid values are Normal for the full UI, and AutoAdvance for a simplied UI. 
 
-UIMODE="Normal"
+; DL: clashed with /q /quiet switch
+;UIMODE="Normal"
 
 ; Specify if errors can be reported to Microsoft to improve future SQL Server releases. Specify 1 or True to enable and 0 or False to disable this feature. 
 
@@ -148,7 +149,8 @@ SQLSVCACCOUNT="NT AUTHORITY\SYSTEM"
 
 ; Windows account(s) to provision as SQL Server system administrators. 
 
-SQLSYSADMINACCOUNTS="WIN-5128QSGNOSR\Administrator" "solotech"
+;SQLSYSADMINACCOUNTS="WIN-5128QSGNOSR\Administrator" "solotech"
+SQLSYSADMINACCOUNTS="BUILTIN\ADMINISTRATORS"
 
 ; The default is Windows Authentication. Use "SQL" for Mixed Mode Authentication. 
 
